<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mefit</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_device_acitivy">DeviceAcitivy</string>
    <string name="title_activity_personal_setting">PersonalSettingActivity</string>

    <!-- dialog -->
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_sync_data">SyncDataActivity</string>
    <string name="title_activity_setting_remind">SettingRemindActivity</string>
    <string name="title_activity_history_sleep">HistorySleepActivity</string>
    <string name="title_activity_history_sport">HistorySportActivity</string>
    <string name="up">&lt;</string>
    <string name="down">></string>
    <string name="title_activity_count">CountActivity</string>
    <string name="title_activity_sport_info">SportInfoActivity</string>
    <string name="title_activity_spalish">SpalishActivity</string>
    <string name="share">Share</string>
    <string name="connected">Connected</string>
    <string name="refresh">Refresh</string>
    <string name="sync_data">Sync Data</string>
    <string name="about">About</string>
    <string name="exit_app">Exit?</string>
    <string name="tab_home">Home</string>
    <string name="tab_me">Me</string>
    <string name="tab_setting">Setting</string>
    <string name="per_day">/Day</string>
    <string name="step">Step</string>
    <string name="minute">Min</string>
    <string name="km">KM</string>
    <string name="kcal">Kcal</string>
    <string name="delete">Delete</string>
    <string name="statistics">Statistics</string>
    <string name="sport">Sport</string>
    <string name="avg">Avg : </string>
    <string name="step_per_day">Step/Day</string>
    <string name="rb_step">Steps</string>
    <string name="rb_time">Time</string>
    <string name="rb_distance">Distance</string>
    <string name="rb_cal">Calorie</string>
    <string name="sleep">Sleep History</string>
    <string name="sleep_deep">Deep</string>
    <string name="sleep_light">Light</string>
    <string name="nuknow">Unknow</string>
    <string name="connect_success">Success</string>
    <string name="success">Success</string>
    <string name="connect_fail">Fail</string>
    <string name="my_device">Device</string>
    <string name="bonded_device">Device Bonded</string>
    <string name="nearby_device">Device Nearby</string>
    <string name="times">Times</string>
    <string name="hour">Hour</string>
    <string name="sport_histroy">Sport History</string>
    <string name="sleep_history">Sleep History</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="sex">Sex</string>
    <string name="woman">F</string>
    <string name="man">M</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="sleep_time">SleepTime</string>
    <string name="wake_up">WakeTime</string>
    <string name="zh_">ZH</string>
    <string name="en_">EN</string>
    <string name="birthday">Birthday</string>
    <string name="sleep_jiance">PSG</string>
    <string name="remind_date">Remdate</string>
    <string name="remind_time">Remtime</string>
    <string name="disconnect_info">Bracelet has been disconnected.</string>
    <string name="personal_remind">Personal Reminder</string>
    <string name="remind_incoming">Incoming Reminder</string>
    <string name="alarm_day">Daily Alarm</string>
    <string name="remind_long_sit">Sedentary Reminder</string>
    <string name="remind_birthday">Birthday Reminder</string>
    <string name="date_">Date</string>
    <string name="time_">Time</string>
    <string name="remind_time_point">TimeBar </string>
    <string name="km_per_hour">km/h</string>
    <string name="use_hour">With Time</string>
    <string name="distance">Distance(Km)</string>
    <string name="avg_speed">Averaged Velocity</string>
    <string name="energy_consumption">Energy Consumption</string>
    <string name="total_distance">Trip Odometer</string>
    <string name="total_time">Cumutative Time</string>
    <string name="total_steps">Cumutative Step</string>
    <string name="times_per_min">Times/Min</string>
    <string name="now_hr">Present Heart Rate</string>
    <string name="mi">M</string>
    <string name="cal">Cal</string>
    <string name="person_setting">Person Setting</string>
    <string name="long_camera">Remote Camera</string>
    <string name="searching">Searching</string>
    <string name="start_search">Start Search</string>
    <string name="title_activity_about">AboutActivity</string>

</resources>